# Python

./: 1.Hola Mundo.ipynb  11.PideNumeros.ipynb  13.practicaN.ipynb  18.ListasAnidadas.ipynb  19.ListasAnidadas.ipynb  20.Diccionarios.ipynb  21.DiccionarioComprensivo.ipynb  22.AgendaEnPython.ipynb  24.Conjuntos.ipynb  3.factorial.ipynb  30.expresionesRegulares.ipynb  31.regex.ipynb  32.Regex.ipynb  33.AperturaArchivos.ipynb  34.lecutraNumeros.ipynb  35.notasAlta.ipynb  36.EscrituraDeArchivos.ipynb  37.LecturaEscrituraCSV.ipynb  38.pop.py  5.hipotenusa.ipynb  6.estatura.ipynb  7.precioDescuento.ipynb  9.comprobacionMeses.ipynb  Comando importante.txt  README.md  nota.txt
Acceso a datos/: 01_request_examples.py  comando.ejemplos.json  ejbbdd.sql  ejbbdd2.sql  enlacesDeRelevancia.txt  prueba_flask.py  taller.ipynb  tallerRefactorizado.py
EjerciciosEntregables/: 01_ejercicio_taller.ipynb  01_ejercicio_taller_corregido.ipynb
FundamentosyPoo/: 12.ipynb  14.practicaConEspacios.ipynb  16.listasMeses.ipynb  17.listasMetidas2.ipynb  2.ejercicio.ipynb  23MetodosAnadirBuscar.ipynb  25.funciones.ipynb  26.filterYmap.ipynb  27.EjercicioMapy fiter.ipynb  28.fechasDiferencia.ipynb  29.DiccionariosYFechas.ipynb  35.notasAlta.ipynb  36.EscrituraDeArchivos.ipynb  3imc.ipynb  (+7 more)
backendejercicios/: casas.py  comentarios.py  crowdfunding.py  emojis.py  finanzas.py  main.py  mascotas.py  pokemons.py  pruebas.py  pyproject.toml  recetas.py  spam.py  tiempo.py  traductor.py
backendejercicios/csv/: casas.csv  comentarios.csv  crowdfunding.csv  emojis.csv  mascotas.csv  recetas.csv  spam.csv
(+92 files in other folders)
