[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
pandas = "^2.2.2"
requests = "^2.32.3"
flask = "^3.0.3"
flask-cors = "^4.0.1"
matplotlib = "^3.9.2"
yfinance = "^0.2.41"
scikit-learn = "^1.5.1"
nltk = "^3.9.1"
transformers = "^4.44.2"
tensorflow = "^2.17.0"
tf-keras = "^2.17.0"
sentencepiece = "^0.2.0"
sacremoses = "^0.1.1"


[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

